--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="Database Management"></Label>
 
