--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="Database Management"></Label>
 
-        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Name="CzytelnikDB">
+        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Name="CzytelnikDG" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
                 <DataGridTextColumn Header="Imie" Binding="{Binding imie}"/>
