--- a/DodajWindow.xaml
+++ b/DodajWindow.xaml
@@ -15,7 +15,7 @@
 
         <Label Grid.Row="0" Content="Dodaj"></Label>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Name="addNewCzytelnik">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -33,6 +33,6 @@
             <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding nazwisko}"/>
 
         </Grid>
-        <Button Grid.Row="2" Height="50">Dodaj</Button>
+        <Button Grid.Row="2" Height="50" Click="AddCzytelnik">Dodaj</Button>
     </Grid>
 </Window>
