--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,13 +15,16 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="Database Management"></Label>
 
-        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Name="CzytelnikDBGrid" IsReadOnly="True" Margin="0,0,0,10" Grid.RowSpan="2">
+        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Name="CzytelnikDBGrid" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
                 <DataGridTextColumn Header="Imie" Binding="{Binding imie}"/>
                 <DataGridTextColumn Header="Nazwisko" Binding="{Binding nazwisko}"/>
             </DataGrid.Columns>
+
+       
         </DataGrid>
+        
         <Button  Grid.Row="2" Click="openDodajWindow">Dodaj</Button>
         <Button  Grid.Row="3" Click="refreshDB">Odświez</Button>
     </Grid>
