--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,9 +20,16 @@
                 <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
                 <DataGridTextColumn Header="Imie" Binding="{Binding imie}"/>
                 <DataGridTextColumn Header="Nazwisko" Binding="{Binding nazwisko}"/>
-            </DataGrid.Columns>
 
-       
+                <DataGridTemplateColumn Header="Edytuj">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Edytuj"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                
+            </DataGrid.Columns>
         </DataGrid>
         
         <Button  Grid.Row="2" Click="openDodajWindow">Dodaj</Button>
